--- a/client_code/Mainpage/Escalationlist/RowTemplate1/form_template.yaml
+++ b/client_code/Mainpage/Escalationlist/RowTemplate1/form_template.yaml
@@ -1,7 +1,22 @@
 container:
   type: DataRowPanel
   properties: {role: null, align: left, tooltip: '', border: '', foreground: '', auto_display_data: true,
-    visible: true, font_size: 11, font: '', spacing_above: none, spacing_below: none,
+    visible: true, font_size: 12, font: '', spacing_above: none, spacing_below: none,
     italic: false, background: '', bold: false, underline: false}
-components: []
+components:
+- type: Label
+  properties: {}
+  name: label_1
+  layout_properties: {column: FYHTKZ}
+  data_bindings:
+  - {property: text, code: 'self.item[''last_action_date''].strftime("%b %d %Y %I:%M
+      %p")'}
+- type: Button
+  properties: {role: elevated-button, align: center, tooltip: '', border: '', enabled: true,
+    foreground: '', visible: true, text: Job Report, font_size: 12, font: '', spacing_above: small,
+    icon_align: left, spacing_below: small, italic: false, background: '', bold: false,
+    underline: false, icon: ''}
+  name: jobreport
+  layout_properties: {column: SZVWXY}
+  event_bindings: {click: jobreport_click}
 is_package: true
