Created Mainpage.Mainpage.Escalationlist.RowTemplate1 and Mainpage.Mainpage.Escalationlist; Edited Data and Mainpage.Mainpage; Deleted Mainpage.Escalationlist and Mainpage.Escalationlist.RowTemplate1

--- a/client_code/Mainpage/Mainpage/Escalationlist/form_template.yaml
+++ b/client_code/Mainpage/Mainpage/Escalationlist/form_template.yaml
@@ -42,7 +42,7 @@ components:
       layout_properties: {}
       components:
       - type: RepeatingPanel
-        properties: {spacing_above: none, spacing_below: none, item_template: Mainpage.Escalationlist.RowTemplate1}
+        properties: {spacing_above: none, spacing_below: none, item_template: Mainpage.Mainpage.Escalationlist.RowTemplate1}
         name: repeating_panel_1
         layout_properties: {}
 is_package: true
