--- a/.anvil_editor.yaml
+++ b/.anvil_editor.yaml
@@ -2,8 +2,7 @@ unique_ids:
   forms:
     Homepage: VY3XQF7XYCO43UXCOG4EM42WVI2XP64Q
     Mainpage.Mainpage: '1687135635536734583197220.891'
-    Mainpage.Mainpage.Escalationlist: '168713906341426305928719.76978'
-    Mainpage.Mainpage.Escalationlist.RowTemplate1: '1687139172855366975840770.57874'
+    Mainpage.Mainpage.RowTemplate1: '1687139172855366975840770.57874'
   modules:
     Data: '168713694717361145552226.54161'
     Mainpage: '1687135576701797107439229.142'
