--- a/client_code/Mainpage/Mainpage/form_template.yaml
+++ b/client_code/Mainpage/Mainpage/form_template.yaml
@@ -18,7 +18,7 @@ components:
   name: rich_text_1
   layout_properties:
     col_widths: {}
-    grid_position: KZOTKC,HPNHSM
+    grid_position: DQMOCH,BIXAFN
   components:
   - type: GridPanel
     properties: {spacing_above: small, spacing_below: small, background: '', foreground: '',
@@ -340,8 +340,41 @@ components:
       - {property: selected_value, code: 'self.filters[''esc_status'']', writeback: true}
       name: dd_esc_status
       event_bindings: {change: filter_change}
-  - type: form:Mainpage.Mainpage.Escalationlist
-    properties: {}
-    name: escalationlist_1
-    layout_properties: {}
+- type: GridPanel
+  properties: {}
+  name: grid_panel_2
+  layout_properties: {grid_position: 'ERFONM,JKBNWB'}
+  components:
+  - type: RichText
+    properties: {role: null, align: center, tooltip: '', enable_slots: true, border: '',
+      foreground: '', visible: true, font_size: 20, content: Escalation Dashboard,
+      font: '', spacing_above: small, spacing_below: small, data: null, background: '',
+      format: markdown}
+    name: rich_text_2
+    layout_properties: {row: OEOIGA, width_xs: 5, col_xs: 4, width: 220}
+    components: []
+  - type: DataGrid
+    properties:
+      role: null
+      columns: []
+      auto_header: true
+      tooltip: ''
+      border: ''
+      foreground: ''
+      rows_per_page: 20
+      visible: true
+      wrap_on: never
+      show_page_controls: true
+      spacing_above: small
+      spacing_below: small
+      background: ''
+    name: data_grid_1
+    layout_properties: {width: 750, row: BEEIKG, width_xs: 12, col_xs: 0}
+    components:
+    - type: RepeatingPanel
+      properties: {role: null, tooltip: '', border: '', foreground: '', items: null,
+        visible: true, spacing_above: none, spacing_below: none, item_template: Mainpage.Mainpage.RowTemplate1,
+        background: ''}
+      name: repeating_panel_1
+      layout_properties: {}
 is_package: true
