--- a/client_code/Mainpage/Mainpage/RowTemplate1/form_template.yaml
+++ b/client_code/Mainpage/Mainpage/RowTemplate1/form_template.yaml
@@ -8,38 +8,26 @@ components:
   properties: {col_widths: '{}'}
   name: column_panel_1
   layout_properties: {column: SZVWXY}
-  components:
-  - type: Label
-    properties: {}
-    name: label_2
-    layout_properties: {column: PRERBG, grid_position: 'BCKGJB,WLFSDP'}
-    data_bindings:
-    - {property: text, code: 'self.item[''job_status''][''name'']'}
-  - type: Label
-    properties: {}
-    name: label_3
-    layout_properties: {column: null, grid_position: 'BCKGJB,DWVDYO'}
-    data_bindings:
-    - {property: text, code: 'self.item[''escalation_type''][''name'']'}
-  - type: Label
-    properties: {}
-    name: label_4
-    layout_properties: {column: PRERBG, grid_position: 'BCKGJB,KIIBVO'}
-    data_bindings:
-    - {property: text, code: 'self.item[''latest_status''][''name'']'}
-  - type: Label
-    properties: {}
-    name: label_1
-    layout_properties: {column: FYHTKZ, grid_position: 'BCKGJB,VPGQDG'}
-    data_bindings:
-    - {property: text, code: 'self.item[''last_action_date''].strftime("%b %d %Y %I:%M
-        %p")'}
-  - type: Button
-    properties: {role: elevated-button, align: center, tooltip: '', border: '', enabled: true,
-      foreground: '', visible: true, text: Job Report, font_size: 12, font: '', spacing_above: small,
-      icon_align: left, spacing_below: small, italic: false, background: '', bold: false,
-      underline: false, icon: ''}
-    name: jobreport
-    layout_properties: {column: SZVWXY, grid_position: 'BCKGJB,RVLWDI'}
-    event_bindings: {click: jobreport_click}
+  components: []
+- type: Button
+  properties: {role: elevated-button, align: center, tooltip: '', border: '', enabled: true,
+    foreground: '', visible: true, text: Job Report, font_size: 12, font: '', spacing_above: small,
+    icon_align: left, spacing_below: small, italic: false, background: '', bold: false,
+    underline: false, icon: ''}
+  name: jobreport
+  layout_properties: {column: YBLVEX, grid_position: 'BCKGJB,RVLWDI'}
+  event_bindings: {click: jobreport_click}
+- type: Label
+  properties: {}
+  name: label_2
+  layout_properties: {column: JVSRGA}
+  data_bindings:
+  - {property: text, code: 'self.item[''last_action_date''].strftime("%b %d %Y %I:%M
+      %p")'}
+- type: Label
+  properties: {}
+  name: label_1
+  layout_properties: {column: HIBOCD, grid_position: 'BCKGJB,VPGQDG'}
+  data_bindings:
+  - {property: text, code: 'self.item[''job_status''][''name'']'}
 is_package: true
