Created Mainpage.Actionlog.RowTemplate2 and Mainpage.Actionlog

--- a/.anvil_editor.yaml
+++ b/.anvil_editor.yaml
@@ -1,6 +1,8 @@
 unique_ids:
   forms:
     Homepage: VY3XQF7XYCO43UXCOG4EM42WVI2XP64Q
+    Mainpage.Actionlog: '1687327361440489905191294.7403'
+    Mainpage.Actionlog.RowTemplate2: '168732742878558484969693.647804'
     Mainpage.Mainpage: '1687135635536734583197220.891'
     Mainpage.Mainpage.RowTemplate1: '1687139172855366975840770.57874'
   modules:
