--- a/client_code/Mainpage/Actionlog/form_template.yaml
+++ b/client_code/Mainpage/Actionlog/form_template.yaml
@@ -9,17 +9,57 @@ components:
   name: outlined_card_1
   layout_properties: {grid_position: 'CFPSKO,TVYZJS'}
   components:
-  - type: DataGrid
-    properties:
-      columns:
-      - {id: PDSMTF, title: Column 1, data_key: column_1}
-      - {id: YDJGYB, title: Column 2, data_key: column_2}
-      - {id: KPZMZN, title: Column 3, data_key: column_3}
-    name: data_grid_1
-    layout_properties: {grid_position: 'KREVQN,JQGROC'}
+  - type: ColumnPanel
+    properties: {role: elevated-card, tooltip: '', border: '', foreground: '', visible: true,
+      wrap_on: mobile, col_spacing: medium, spacing_above: small, col_widths: '{}',
+      spacing_below: small, background: ''}
+    name: column_panel_1
+    layout_properties: {grid_position: 'CSOXSE,IRTWGR'}
     components:
-    - type: RepeatingPanel
-      properties: {spacing_above: none, spacing_below: none, item_template: Mainpage.Actionlog.RowTemplate2}
-      name: repeating_panel_1
-      layout_properties: {}
+    - type: Label
+      properties: {role: display, align: left, tooltip: '', border: '', foreground: '',
+        visible: true, text: '', font_size: null, font: '', spacing_above: small,
+        icon_align: left, spacing_below: small, italic: false, background: '', bold: true,
+        underline: false, icon: ''}
+      name: job_id
+      layout_properties: {grid_position: 'FJYURP,IJTDVH'}
+      data_bindings:
+      - {property: text, code: 'self.item[''job_id'']'}
+    - type: Label
+      properties: {role: headline, align: left, tooltip: '', border: '', foreground: '',
+        visible: true, text: '', font_size: null, font: '', spacing_above: small,
+        icon_align: left, spacing_below: small, italic: false, background: '', bold: false,
+        underline: false, icon: ''}
+      name: status
+      layout_properties: {grid_position: 'FJYURP,PVXDRB'}
+      data_bindings:
+      - {property: text, code: 'self.item[''status]'}
+    - type: Label
+      properties: {role: title, align: left, tooltip: '', border: '', foreground: '',
+        visible: true, text: '', font_size: null, font: '', spacing_above: small,
+        icon_align: left, spacing_below: small, italic: false, background: '', bold: false,
+        underline: false, icon: ''}
+      name: user
+      layout_properties: {grid_position: 'QNTUTC,FTUSFV'}
+      data_bindings:
+      - {property: text, code: 'self.item[''user''][''name'']'}
+    - type: Label
+      properties: {role: title, align: left, tooltip: '', border: '', foreground: '',
+        visible: true, text: '', font_size: null, font: '', spacing_above: small,
+        icon_align: left, spacing_below: small, italic: false, background: '', bold: false,
+        underline: false, icon: ''}
+      name: datetime
+      layout_properties: {grid_position: 'QNTUTC,AFLYUV'}
+      data_bindings:
+      - {property: text, code: 'self.item[''created_date''].strftime("%b %d %Y %I:%M
+          %p")'}
+    - type: Label
+      properties: {role: body, align: left, tooltip: '', border: '', foreground: '',
+        visible: true, text: '', font_size: null, font: '', spacing_above: small,
+        icon_align: left, spacing_below: small, italic: false, background: '', bold: false,
+        underline: false, icon: ''}
+      name: content
+      layout_properties: {grid_position: 'BBUWXH,BCOPDO'}
+      data_bindings:
+      - {property: text, code: 'self.item[''description'']'}
 is_package: true
