--- a/client_code/Mainpage/Actionlog/form_template.yaml
+++ b/client_code/Mainpage/Actionlog/form_template.yaml
@@ -3,42 +3,33 @@ container:
   properties: {col_widths: '{}'}
 components:
 - type: ColumnPanel
-  properties: {role: elevated-card, tooltip: '', border: '', foreground: '', visible: true,
+  properties: {role: outlined-card, tooltip: '', border: '', foreground: '', visible: true,
     wrap_on: mobile, col_spacing: medium, spacing_above: small, col_widths: '{}',
     spacing_below: small, background: ''}
   name: column_panel_1
   layout_properties: {grid_position: 'ENQJZO,ABMXWP'}
   components:
   - type: Label
-    properties: {role: title, align: left, tooltip: '', border: '', foreground: '',
-      visible: true, text: '', font_size: null, font: '', spacing_above: small, icon_align: left,
+    properties: {role: body, align: left, tooltip: '', border: '', foreground: '',
+      visible: true, text: '', font_size: 12, font: '', spacing_above: small, icon_align: left,
       spacing_below: small, italic: false, background: '', bold: true, underline: false,
-      icon: ''}
-    name: job_id
-    layout_properties: {grid_position: 'FJYURP,IJTDVH'}
-    data_bindings:
-    - {property: text, code: 'self.item[''job_id''][''job_id'']'}
-  - type: Label
-    properties: {role: title, align: left, tooltip: '', border: '', foreground: '',
-      visible: true, text: '', font_size: null, font: '', spacing_above: small, icon_align: left,
-      spacing_below: small, italic: false, background: '', bold: false, underline: false,
       icon: ''}
     name: status
     layout_properties: {grid_position: 'FJYURP,PVXDRB'}
     data_bindings:
-    - {property: text, code: 'self.item[''status''][''name'']'}
+    - {property: text, code: '"Status: "+self.item[''status''][''name'']'}
   - type: Label
-    properties: {role: title, align: left, tooltip: '', border: '', foreground: '',
-      visible: true, text: '', font_size: null, font: '', spacing_above: small, icon_align: left,
-      spacing_below: small, italic: false, background: '', bold: false, underline: false,
+    properties: {role: body, align: left, tooltip: '', border: '', foreground: '',
+      visible: true, text: '', font_size: 11, font: '', spacing_above: small, icon_align: left,
+      spacing_below: small, italic: false, background: '', bold: true, underline: false,
       icon: ''}
     name: user
     layout_properties: {grid_position: 'QNTUTC,FTUSFV'}
     data_bindings:
     - {property: text, code: 'self.item[''user''][''name'']'}
   - type: Label
-    properties: {role: title, align: left, tooltip: '', border: '', foreground: '',
-      visible: true, text: '', font_size: null, font: '', spacing_above: small, icon_align: left,
+    properties: {role: body, align: left, tooltip: '', border: '', foreground: '',
+      visible: true, text: '', font_size: 11, font: '', spacing_above: small, icon_align: left,
       spacing_below: small, italic: false, background: '', bold: false, underline: false,
       icon: ''}
     name: datetime
@@ -48,7 +39,7 @@ components:
         %p")'}
   - type: Label
     properties: {role: body, align: left, tooltip: '', border: '', foreground: '',
-      visible: true, text: '', font_size: null, font: '', spacing_above: small, icon_align: left,
+      visible: true, text: '', font_size: 11, font: '', spacing_above: small, icon_align: left,
       spacing_below: small, italic: false, background: '', bold: false, underline: false,
       icon: ''}
     name: content
