--- a/client_code/Mainpage/Mainpage/form_template.yaml
+++ b/client_code/Mainpage/Mainpage/form_template.yaml
@@ -1,6 +1,6 @@
 container:
   type: ColumnPanel
-  properties: {col_widths: '{"JKBNWB":45}'}
+  properties: {col_widths: '{"JKBNWB":59,"GUQSNV":16}'}
 components:
 - type: Button
   properties: {role: filled-button, align: right, tooltip: '', border: '', enabled: true,
@@ -385,10 +385,26 @@ components:
         background: ''}
       name: repeating_panel_1
       layout_properties: {}
-- type: RepeatingPanel
-  properties: {role: null, tooltip: '', border: '', foreground: '', items: null, visible: true,
-    spacing_above: small, spacing_below: small, item_template: Mainpage.Actionlog,
-    background: ''}
-  name: action_panel
+- type: ColumnPanel
+  properties: {role: elevated-card, tooltip: '', border: '', foreground: '', visible: true,
+    wrap_on: mobile, col_spacing: medium, spacing_above: small, col_widths: '{}',
+    spacing_below: small, background: ''}
+  name: column_panel_1
   layout_properties: {grid_position: 'ERFONM,GUQSNV'}
+  components:
+  - type: Label
+    properties: {role: null, align: left, tooltip: '', border: '', foreground: '',
+      visible: true, text: 'Job ID :', font_size: 14, font: '', spacing_above: small,
+      icon_align: left, spacing_below: small, italic: false, background: '', bold: true,
+      underline: false, icon: ''}
+    name: job_id
+    layout_properties: {grid_position: 'WPIIWL,GCILUJ'}
+    data_bindings:
+    - {property: text, code: '"Job ID: " + self.item[''job_id''][''job_id'']'}
+  - type: RepeatingPanel
+    properties: {role: null, tooltip: '', border: '', foreground: '', items: null,
+      visible: true, spacing_above: small, spacing_below: small, item_template: Mainpage.Actionlog,
+      background: ''}
+    name: action_panel
+    layout_properties: {grid_position: 'BKXZMM,ACHLBH'}
 is_package: true
