Edited Mainpage.Actionlog, Mainpage.Mainpage, Mainpage.Mainpage.RowTemplate1, ServerModule1 and 1 more

--- a/anvil.yaml
+++ b/anvil.yaml
@@ -161,5 +161,5 @@ db_schema:
       admin_ui: {order: 7, width: 200}
       type: link_single
       target: escalation_status
-    title: Action Log
+    title: action_log
 renamed: true
