--- a/anvil.yaml
+++ b/anvil.yaml
@@ -51,7 +51,7 @@ db_schema:
       admin_ui: {width: 200}
       type: string
   users:
-    title: Users
+    title: users
     client: none
     server: full
     columns:
