--- a/client_code/Mainpage/Actionlog/form_template.yaml
+++ b/client_code/Mainpage/Actionlog/form_template.yaml
@@ -35,7 +35,7 @@ components:
     name: datetime
     layout_properties: {grid_position: 'QNTUTC,AFLYUV'}
     data_bindings:
-    - {property: text, code: 'self.item[''created_date''].strftime("d/m/%-y %H:%M")'}
+    - {property: text, code: 'self.item[''created_date''].strftime("%d/%m/%-y %H:%M")'}
   - type: Label
     properties: {role: body, align: left, tooltip: '', border: '', foreground: '',
       visible: true, text: '', font_size: 11, font: '', spacing_above: none, icon_align: left,
