--- a/client_code/Mainpage/Mainpage/form_template.yaml
+++ b/client_code/Mainpage/Mainpage/form_template.yaml
@@ -455,7 +455,7 @@ components:
     name: dd_assign
     layout_properties: {grid_position: 'EFUDBX,DIPKCH'}
     data_bindings:
-    - {property: items, code: 'self.item[''self_assign'']'}
+    - {property: items, code: self.users}
   - type: Button
     properties: {role: elevated-button, align: center, tooltip: '', border: '', enabled: true,
       foreground: '', visible: true, text: Submit, font_size: 11, font: '', spacing_above: small,
