Edited ServerModule1 and Mainpage.Mainpage

--- a/client_code/Mainpage/Mainpage/form_template.yaml
+++ b/client_code/Mainpage/Mainpage/form_template.yaml
@@ -235,7 +235,7 @@ components:
         border: ''
         enabled: true
         foreground: ''
-        items: ['1']
+        items: ['1', '2']
         visible: true
         font_size: 12
         font: ''
