--- a/client_code/Mainpage/Mainpage/RowTemplate1/form_template.yaml
+++ b/client_code/Mainpage/Mainpage/RowTemplate1/form_template.yaml
@@ -44,3 +44,4 @@ components:
     bold: false, group_name: orderSelection, underline: false}
   name: orderSelection_radio
   layout_properties: {column: YFVFNN}
+  event_bindings: {clicked: orderSelection_radio_clicked}
