--- a/client_code/Mainpage/jobreport/form_template.yaml
+++ b/client_code/Mainpage/jobreport/form_template.yaml
@@ -4,9 +4,14 @@ container:
   properties: {html: '@theme:standard-page.html'}
 components:
 - type: ColumnPanel
-  properties: {}
+  properties: {col_widths: '{}'}
   name: content_panel
   layout_properties: {slot: default}
+  components:
+  - type: XYPanel
+    properties: {height: 100}
+    name: xy_panel_1
+    layout_properties: {grid_position: 'MAGTPV,HEWTBI'}
 - type: FlowPanel
   properties: {}
   name: navbar_links
